Fixed errorneous AVB title in doc

--- a/api.html
+++ b/api.html
@@ -24,7 +24,7 @@
     <script type="text/javascript" src="http://mathjax.connectmv.com/MathJax.js"></script>
     <link rel="top" title="XTCP TCP/IP Stack v2v0 documentation" href="index.html" />
     <link rel="next" title="References" href="references.html" />
-    <link rel="prev" title="An XMOS AVB application (tutorial)" href="app_tutorial.html" /> 
+    <link rel="prev" title="An XTCP application (tutorial)" href="app_tutorial.html" /> 
 
 <script>
 function setheight() {
